fixed unwanted horizontal scroll in chromium browsers

--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ body {
     background-repeat: no-repeat;
     object-fit: cover;
     max-width: 100%;
+    overflow-x: hidden;
 }
 a {
     color: white;
